Edit to allow being run as stand-alone script
Minor edits and changes to allow this to be run as a stand-alone script
rather than as a part of a project.  Updated the readme to reflect the
changes made and how to run the "updated" script.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"mysql_user": "sde",
-	"mysql_password": "sde",
-	"mysql_database": "sde",
-	"baseHref": "http://sde.zzeve.com/"
+	"mysql_user": "user",
+	"mysql_password": "password",
+	"mysql_database": "SDE",
+	"baseHref": "127.0.0.1"
 }
